parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DOT
    PRINT

Grammar

Rule 0     S' -> programa
Rule 1     programa -> PROGRAM ID SEMICOLON establishglobalscope programaP
Rule 2     establishglobalscope -> <empty>
Rule 3     programaP -> vars programaP
Rule 4     programaP -> clase programaP
Rule 5     programaP -> funcion programaP
Rule 6     programaP -> bloque
Rule 7     programaP -> empty
Rule 8     clase -> CLASS ID OPENBRACE claseP CLOSEBRACE
Rule 9     claseP -> vars clasePP
Rule 10    claseP -> clasePP
Rule 11    clasePP -> funcion clasePP
Rule 12    clasePP -> empty
Rule 13    funcion -> FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
Rule 14    savefuncscope -> <empty>
Rule 15    paramsfunction -> tipo param COMMA paramsfunction
Rule 16    paramsfunction -> tipo param
Rule 17    return -> RETURN exp
Rule 18    return -> RETURN
Rule 19    vars -> VARS tipo savetype TWODOTS varsP
Rule 20    varsP -> param COMMA varsP
Rule 21    varsP -> param SEMICOLON
Rule 22    savetype -> <empty>
Rule 23    param -> ID
Rule 24    param -> ID OPENBRACKET paramsP CLOSEBRACKET
Rule 25    paramsP -> exp COMMA paramsP
Rule 26    paramsP -> exp
Rule 27    tipo -> INT
Rule 28    tipo -> FLOAT
Rule 29    tipo -> CHAR
Rule 30    tipo -> BOOL
Rule 31    bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
Rule 32    bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE
Rule 33    establishmainscope -> <empty>
Rule 34    estatuto -> asignacion estatuto
Rule 35    estatuto -> llamada estatuto
Rule 36    estatuto -> retorno estatuto
Rule 37    estatuto -> lectura estatuto
Rule 38    estatuto -> escritura estatuto
Rule 39    estatuto -> repeticion estatuto
Rule 40    estatuto -> declaracion estatuto
Rule 41    estatuto -> empty
Rule 42    declaracion -> vars
Rule 43    llamada -> ID OPENPARENTHESES param CLOSEPARENTHESES SEMICOLON
Rule 44    llamada -> ID OPENPARENTHESES CLOSEPARENTHESES SEMICOLON
Rule 45    retorno -> RETURN OPENPARENTHESES exp CLOSEPARENTHESES SEMICOLON
Rule 46    lectura -> READ OPENPARENTHESES param CLOSEPARENTHESES SEMICOLON
Rule 47    asignacion -> ID EQUALS exp SEMICOLON
Rule 48    asignacion -> ID OPENBRACKET paramsP CLOSEBRACKET EQUALS exp SEMICOLON
Rule 49    escritura -> WRITE OPENPARENTHESES escrituraP CLOSEPARENTHESES SEMICOLON
Rule 50    escrituraP -> QUOTATIONMARK CTESTRING QUOTATIONMARK COMMA escrituraP
Rule 51    escrituraP -> exp COMMA escrituraP
Rule 52    escrituraP -> ID COMMA escrituraP
Rule 53    escrituraP -> QUOTATIONMARK CTESTRING QUOTATIONMARK
Rule 54    escrituraP -> exp
Rule 55    escrituraP -> ID
Rule 56    condicion -> IF OPENPARENTHESES exp CLOSEPARENTHESES THEN OPENBRACE estatuto CLOSEBRACE ELSE OPENBRACE estatuto CLOSEBRACE
Rule 57    condicion -> IF OPENPARENTHESES exp CLOSEPARENTHESES THEN OPENBRACE CLOSEBRACE ELSE OPENBRACE estatuto CLOSEBRACE
Rule 58    condicion -> IF OPENPARENTHESES exp CLOSEPARENTHESES THEN OPENBRACE estatuto CLOSEBRACE ELSE OPENBRACE CLOSEBRACE
Rule 59    condicion -> IF OPENPARENTHESES exp CLOSEPARENTHESES THEN OPENBRACE estatuto CLOSEBRACE
Rule 60    condicion -> IF OPENPARENTHESES exp CLOSEPARENTHESES THEN OPENBRACE CLOSEBRACE
Rule 61    repeticion -> condicional
Rule 62    repeticion -> no_condicional
Rule 63    condicional -> WHILE OPENPARENTHESES exp CLOSEPARENTHESES DO OPENBRACE estatuto CLOSEBRACE
Rule 64    condicional -> WHILE OPENPARENTHESES exp CLOSEPARENTHESES DO OPENBRACE CLOSEBRACE
Rule 65    no_condicional -> FOR ID EQUALS exp TO exp OPENBRACE estatuto CLOSEBRACE
Rule 66    no_condicional -> FOR ID EQUALS exp TO exp DO OPENBRACE CLOSEBRACE
Rule 67    exp -> termino
Rule 68    exp -> exp PLUS termino
Rule 69    exp -> exp MINUS termino
Rule 70    termino -> factor
Rule 71    termino -> termino MULTIPLY factor
Rule 72    termino -> termino DIVIDE factor
Rule 73    factor -> ID OPENPARENTHESES exp CLOSEPARENTHESES
Rule 74    factor -> ID
Rule 75    factor -> CTEF
Rule 76    factor -> CTEI
Rule 77    factor -> OPENPARENTHESES h_exp CLOSEPARENTHESES
Rule 78    h_exp -> s_exp
Rule 79    h_exp -> s_exp AND h_exp
Rule 80    h_exp -> s_exp OR h_exp
Rule 81    s_exp -> exp
Rule 82    s_exp -> exp GREATER exp
Rule 83    s_exp -> exp LESS exp
Rule 84    s_exp -> exp DIFFERENT exp
Rule 85    s_exp -> exp EQUALS_BOOLEAN exp
Rule 86    s_exp -> exp LESSEQUAL exp
Rule 87    s_exp -> exp GREATEREQUAL exp
Rule 88    empty -> <empty>

Terminals, with rules where they appear

AND                  : 79
BOOL                 : 30
CHAR                 : 29
CLASS                : 8
CLOSEBRACE           : 8 13 31 32 56 56 57 57 58 58 59 60 63 64 65 66
CLOSEBRACKET         : 24 48
CLOSEPARENTHESES     : 13 31 32 43 44 45 46 49 56 57 58 59 60 63 64 73 77
COMMA                : 15 20 25 50 51 52
CTEF                 : 75
CTEI                 : 76
CTESTRING            : 50 53
DIFFERENT            : 84
DIVIDE               : 72
DO                   : 63 64 66
DOT                  : 
ELSE                 : 56 57 58
EQUALS               : 47 48 65 66
EQUALS_BOOLEAN       : 85
FLOAT                : 28
FOR                  : 65 66
FUNCTION             : 13
GREATER              : 82
GREATEREQUAL         : 87
ID                   : 1 8 13 23 24 43 44 47 48 52 55 65 66 73 74
IF                   : 56 57 58 59 60
INT                  : 27
LESS                 : 83
LESSEQUAL            : 86
MAIN                 : 31 32
MINUS                : 69
MULTIPLY             : 71
OPENBRACE            : 8 13 31 32 56 56 57 57 58 58 59 60 63 64 65 66
OPENBRACKET          : 24 48
OPENPARENTHESES      : 13 31 32 43 44 45 46 49 56 57 58 59 60 63 64 73 77
OR                   : 80
PLUS                 : 68
PRINT                : 
PROGRAM              : 1
QUOTATIONMARK        : 50 50 53 53
READ                 : 46
RETURN               : 17 18 45
SEMICOLON            : 1 21 43 44 45 46 47 48 49
THEN                 : 56 57 58 59 60
TO                   : 65 66
TWODOTS              : 13 19
VARS                 : 19
WHILE                : 63 64
WRITE                : 49
error                : 

Nonterminals, with rules where they appear

asignacion           : 34
bloque               : 6
clase                : 4
claseP               : 8
clasePP              : 9 10 11
condicion            : 
condicional          : 61
declaracion          : 40
empty                : 7 12 41
escritura            : 38
escrituraP           : 49 50 51 52
establishglobalscope : 1
establishmainscope   : 31
estatuto             : 13 31 34 35 36 37 38 39 40 56 56 57 58 59 63 65
exp                  : 17 25 26 45 47 48 51 54 56 57 58 59 60 63 64 65 65 66 66 68 69 73 81 82 82 83 83 84 84 85 85 86 86 87 87
factor               : 70 71 72
funcion              : 5 11
h_exp                : 77 79 80
lectura              : 37
llamada              : 35
no_condicional       : 62
param                : 15 16 20 21 43 46
paramsP              : 24 25 48
paramsfunction       : 13 15
programa             : 0
programaP            : 1 3 4 5
repeticion           : 39
retorno              : 36
return               : 
s_exp                : 78 79 80
savefuncscope        : 13
savetype             : 19
termino              : 67 68 69 71 72
tipo                 : 13 15 16 19
vars                 : 3 9 42
varsP                : 19 20

Parsing method: LALR

state 0

    (0) S' -> . programa
    (1) programa -> . PROGRAM ID SEMICOLON establishglobalscope programaP

    PROGRAM         shift and go to state 2

    programa                       shift and go to state 1

state 1

    (0) S' -> programa .



state 2

    (1) programa -> PROGRAM . ID SEMICOLON establishglobalscope programaP

    ID              shift and go to state 3


state 3

    (1) programa -> PROGRAM ID . SEMICOLON establishglobalscope programaP

    SEMICOLON       shift and go to state 4


state 4

    (1) programa -> PROGRAM ID SEMICOLON . establishglobalscope programaP
    (2) establishglobalscope -> .

    VARS            reduce using rule 2 (establishglobalscope -> .)
    CLASS           reduce using rule 2 (establishglobalscope -> .)
    FUNCTION        reduce using rule 2 (establishglobalscope -> .)
    MAIN            reduce using rule 2 (establishglobalscope -> .)
    $end            reduce using rule 2 (establishglobalscope -> .)

    establishglobalscope           shift and go to state 5

state 5

    (1) programa -> PROGRAM ID SEMICOLON establishglobalscope . programaP
    (3) programaP -> . vars programaP
    (4) programaP -> . clase programaP
    (5) programaP -> . funcion programaP
    (6) programaP -> . bloque
    (7) programaP -> . empty
    (19) vars -> . VARS tipo savetype TWODOTS varsP
    (8) clase -> . CLASS ID OPENBRACE claseP CLOSEBRACE
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (31) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE
    (88) empty -> .

    VARS            shift and go to state 12
    CLASS           shift and go to state 13
    FUNCTION        shift and go to state 14
    MAIN            shift and go to state 15
    $end            reduce using rule 88 (empty -> .)

    programaP                      shift and go to state 6
    vars                           shift and go to state 7
    clase                          shift and go to state 8
    funcion                        shift and go to state 9
    bloque                         shift and go to state 10
    empty                          shift and go to state 11

state 6

    (1) programa -> PROGRAM ID SEMICOLON establishglobalscope programaP .

    $end            reduce using rule 1 (programa -> PROGRAM ID SEMICOLON establishglobalscope programaP .)


state 7

    (3) programaP -> vars . programaP
    (3) programaP -> . vars programaP
    (4) programaP -> . clase programaP
    (5) programaP -> . funcion programaP
    (6) programaP -> . bloque
    (7) programaP -> . empty
    (19) vars -> . VARS tipo savetype TWODOTS varsP
    (8) clase -> . CLASS ID OPENBRACE claseP CLOSEBRACE
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (31) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE
    (88) empty -> .

    VARS            shift and go to state 12
    CLASS           shift and go to state 13
    FUNCTION        shift and go to state 14
    MAIN            shift and go to state 15
    $end            reduce using rule 88 (empty -> .)

    vars                           shift and go to state 7
    programaP                      shift and go to state 16
    clase                          shift and go to state 8
    funcion                        shift and go to state 9
    bloque                         shift and go to state 10
    empty                          shift and go to state 11

state 8

    (4) programaP -> clase . programaP
    (3) programaP -> . vars programaP
    (4) programaP -> . clase programaP
    (5) programaP -> . funcion programaP
    (6) programaP -> . bloque
    (7) programaP -> . empty
    (19) vars -> . VARS tipo savetype TWODOTS varsP
    (8) clase -> . CLASS ID OPENBRACE claseP CLOSEBRACE
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (31) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE
    (88) empty -> .

    VARS            shift and go to state 12
    CLASS           shift and go to state 13
    FUNCTION        shift and go to state 14
    MAIN            shift and go to state 15
    $end            reduce using rule 88 (empty -> .)

    clase                          shift and go to state 8
    programaP                      shift and go to state 17
    vars                           shift and go to state 7
    funcion                        shift and go to state 9
    bloque                         shift and go to state 10
    empty                          shift and go to state 11

state 9

    (5) programaP -> funcion . programaP
    (3) programaP -> . vars programaP
    (4) programaP -> . clase programaP
    (5) programaP -> . funcion programaP
    (6) programaP -> . bloque
    (7) programaP -> . empty
    (19) vars -> . VARS tipo savetype TWODOTS varsP
    (8) clase -> . CLASS ID OPENBRACE claseP CLOSEBRACE
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (31) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> . MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE
    (88) empty -> .

    VARS            shift and go to state 12
    CLASS           shift and go to state 13
    FUNCTION        shift and go to state 14
    MAIN            shift and go to state 15
    $end            reduce using rule 88 (empty -> .)

    funcion                        shift and go to state 9
    programaP                      shift and go to state 18
    vars                           shift and go to state 7
    clase                          shift and go to state 8
    bloque                         shift and go to state 10
    empty                          shift and go to state 11

state 10

    (6) programaP -> bloque .

    $end            reduce using rule 6 (programaP -> bloque .)


state 11

    (7) programaP -> empty .

    $end            reduce using rule 7 (programaP -> empty .)


state 12

    (19) vars -> VARS . tipo savetype TWODOTS varsP
    (27) tipo -> . INT
    (28) tipo -> . FLOAT
    (29) tipo -> . CHAR
    (30) tipo -> . BOOL

    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 23

    tipo                           shift and go to state 19

state 13

    (8) clase -> CLASS . ID OPENBRACE claseP CLOSEBRACE

    ID              shift and go to state 24


state 14

    (13) funcion -> FUNCTION . tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (27) tipo -> . INT
    (28) tipo -> . FLOAT
    (29) tipo -> . CHAR
    (30) tipo -> . BOOL

    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 23

    tipo                           shift and go to state 25

state 15

    (31) bloque -> MAIN . OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> MAIN . OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE

    OPENPARENTHESES shift and go to state 26


state 16

    (3) programaP -> vars programaP .

    $end            reduce using rule 3 (programaP -> vars programaP .)


state 17

    (4) programaP -> clase programaP .

    $end            reduce using rule 4 (programaP -> clase programaP .)


state 18

    (5) programaP -> funcion programaP .

    $end            reduce using rule 5 (programaP -> funcion programaP .)


state 19

    (19) vars -> VARS tipo . savetype TWODOTS varsP
    (22) savetype -> .

    TWODOTS         reduce using rule 22 (savetype -> .)

    savetype                       shift and go to state 27

state 20

    (27) tipo -> INT .

    TWODOTS         reduce using rule 27 (tipo -> INT .)
    ID              reduce using rule 27 (tipo -> INT .)


state 21

    (28) tipo -> FLOAT .

    TWODOTS         reduce using rule 28 (tipo -> FLOAT .)
    ID              reduce using rule 28 (tipo -> FLOAT .)


state 22

    (29) tipo -> CHAR .

    TWODOTS         reduce using rule 29 (tipo -> CHAR .)
    ID              reduce using rule 29 (tipo -> CHAR .)


state 23

    (30) tipo -> BOOL .

    TWODOTS         reduce using rule 30 (tipo -> BOOL .)
    ID              reduce using rule 30 (tipo -> BOOL .)


state 24

    (8) clase -> CLASS ID . OPENBRACE claseP CLOSEBRACE

    OPENBRACE       shift and go to state 28


state 25

    (13) funcion -> FUNCTION tipo . TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE

    TWODOTS         shift and go to state 29


state 26

    (31) bloque -> MAIN OPENPARENTHESES . CLOSEPARENTHESES OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> MAIN OPENPARENTHESES . CLOSEPARENTHESES OPENBRACE CLOSEBRACE

    CLOSEPARENTHESES shift and go to state 30


state 27

    (19) vars -> VARS tipo savetype . TWODOTS varsP

    TWODOTS         shift and go to state 31


state 28

    (8) clase -> CLASS ID OPENBRACE . claseP CLOSEBRACE
    (9) claseP -> . vars clasePP
    (10) claseP -> . clasePP
    (19) vars -> . VARS tipo savetype TWODOTS varsP
    (11) clasePP -> . funcion clasePP
    (12) clasePP -> . empty
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (88) empty -> .

    VARS            shift and go to state 12
    FUNCTION        shift and go to state 14
    CLOSEBRACE      reduce using rule 88 (empty -> .)

    claseP                         shift and go to state 32
    vars                           shift and go to state 33
    clasePP                        shift and go to state 34
    funcion                        shift and go to state 35
    empty                          shift and go to state 36

state 29

    (13) funcion -> FUNCTION tipo TWODOTS . ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE

    ID              shift and go to state 37


state 30

    (31) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES . OPENBRACE establishmainscope estatuto CLOSEBRACE
    (32) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES . OPENBRACE CLOSEBRACE

    OPENBRACE       shift and go to state 38


state 31

    (19) vars -> VARS tipo savetype TWODOTS . varsP
    (20) varsP -> . param COMMA varsP
    (21) varsP -> . param SEMICOLON
    (23) param -> . ID
    (24) param -> . ID OPENBRACKET paramsP CLOSEBRACKET

    ID              shift and go to state 41

    varsP                          shift and go to state 39
    param                          shift and go to state 40

state 32

    (8) clase -> CLASS ID OPENBRACE claseP . CLOSEBRACE

    CLOSEBRACE      shift and go to state 42


state 33

    (9) claseP -> vars . clasePP
    (11) clasePP -> . funcion clasePP
    (12) clasePP -> . empty
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (88) empty -> .

    FUNCTION        shift and go to state 14
    CLOSEBRACE      reduce using rule 88 (empty -> .)

    clasePP                        shift and go to state 43
    funcion                        shift and go to state 35
    empty                          shift and go to state 36

state 34

    (10) claseP -> clasePP .

    CLOSEBRACE      reduce using rule 10 (claseP -> clasePP .)


state 35

    (11) clasePP -> funcion . clasePP
    (11) clasePP -> . funcion clasePP
    (12) clasePP -> . empty
    (13) funcion -> . FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (88) empty -> .

    FUNCTION        shift and go to state 14
    CLOSEBRACE      reduce using rule 88 (empty -> .)

    funcion                        shift and go to state 35
    clasePP                        shift and go to state 44
    empty                          shift and go to state 36

state 36

    (12) clasePP -> empty .

    CLOSEBRACE      reduce using rule 12 (clasePP -> empty .)


state 37

    (13) funcion -> FUNCTION tipo TWODOTS ID . savefuncscope OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (14) savefuncscope -> .

    OPENPARENTHESES reduce using rule 14 (savefuncscope -> .)

    savefuncscope                  shift and go to state 45

state 38

    (31) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE . establishmainscope estatuto CLOSEBRACE
    (32) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE . CLOSEBRACE
    (33) establishmainscope -> .

  ! shift/reduce conflict for CLOSEBRACE resolved as shift
    CLOSEBRACE      shift and go to state 47
    ID              reduce using rule 33 (establishmainscope -> .)
    RETURN          reduce using rule 33 (establishmainscope -> .)
    READ            reduce using rule 33 (establishmainscope -> .)
    WRITE           reduce using rule 33 (establishmainscope -> .)
    WHILE           reduce using rule 33 (establishmainscope -> .)
    FOR             reduce using rule 33 (establishmainscope -> .)
    VARS            reduce using rule 33 (establishmainscope -> .)

  ! CLOSEBRACE      [ reduce using rule 33 (establishmainscope -> .) ]

    establishmainscope             shift and go to state 46

state 39

    (19) vars -> VARS tipo savetype TWODOTS varsP .

    VARS            reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    CLASS           reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    FUNCTION        reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    MAIN            reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    $end            reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    CLOSEBRACE      reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    ID              reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    RETURN          reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    READ            reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    WRITE           reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    WHILE           reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)
    FOR             reduce using rule 19 (vars -> VARS tipo savetype TWODOTS varsP .)


state 40

    (20) varsP -> param . COMMA varsP
    (21) varsP -> param . SEMICOLON

    COMMA           shift and go to state 48
    SEMICOLON       shift and go to state 49


state 41

    (23) param -> ID .
    (24) param -> ID . OPENBRACKET paramsP CLOSEBRACKET

    COMMA           reduce using rule 23 (param -> ID .)
    SEMICOLON       reduce using rule 23 (param -> ID .)
    CLOSEPARENTHESES reduce using rule 23 (param -> ID .)
    OPENBRACKET     shift and go to state 50


state 42

    (8) clase -> CLASS ID OPENBRACE claseP CLOSEBRACE .

    VARS            reduce using rule 8 (clase -> CLASS ID OPENBRACE claseP CLOSEBRACE .)
    CLASS           reduce using rule 8 (clase -> CLASS ID OPENBRACE claseP CLOSEBRACE .)
    FUNCTION        reduce using rule 8 (clase -> CLASS ID OPENBRACE claseP CLOSEBRACE .)
    MAIN            reduce using rule 8 (clase -> CLASS ID OPENBRACE claseP CLOSEBRACE .)
    $end            reduce using rule 8 (clase -> CLASS ID OPENBRACE claseP CLOSEBRACE .)


state 43

    (9) claseP -> vars clasePP .

    CLOSEBRACE      reduce using rule 9 (claseP -> vars clasePP .)


state 44

    (11) clasePP -> funcion clasePP .

    CLOSEBRACE      reduce using rule 11 (clasePP -> funcion clasePP .)


state 45

    (13) funcion -> FUNCTION tipo TWODOTS ID savefuncscope . OPENPARENTHESES paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE

    OPENPARENTHESES shift and go to state 51


state 46

    (31) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope . estatuto CLOSEBRACE
    (34) estatuto -> . asignacion estatuto
    (35) estatuto -> . llamada estatuto
    (36) estatuto -> . retorno estatuto
    (37) estatuto -> . lectura estatuto
    (38) estatuto -> . escritura estatuto
    (39) estatuto -> . repeticion estatuto
    (40) estatuto -> . declaracion estatuto
    (41) estatuto -> . empty
    (47) asignacion -> . ID EQUALS exp SEMICOLON
    (48) asignacion -> . ID OPENBRACKET paramsP CLOSEBRACKET EQUALS exp SEMICOLON
    (43) llamada -> . ID OPENPARENTHESES param CLOSEPARENTHESES SEMICOLON
    (44) llamada -> . ID OPENPARENTHESES CLOSEPARENTHESES SEMICOLON
    (45) retorno -> . RETURN OPENPARENTHESES exp CLOSEPARENTHESES SEMICOLON
    (46) lectura -> . READ OPENPARENTHESES param CLOSEPARENTHESES SEMICOLON
    (49) escritura -> . WRITE OPENPARENTHESES escrituraP CLOSEPARENTHESES SEMICOLON
    (61) repeticion -> . condicional
    (62) repeticion -> . no_condicional
    (42) declaracion -> . vars
    (88) empty -> .
    (63) condicional -> . WHILE OPENPARENTHESES exp CLOSEPARENTHESES DO OPENBRACE estatuto CLOSEBRACE
    (64) condicional -> . WHILE OPENPARENTHESES exp CLOSEPARENTHESES DO OPENBRACE CLOSEBRACE
    (65) no_condicional -> . FOR ID EQUALS exp TO exp OPENBRACE estatuto CLOSEBRACE
    (66) no_condicional -> . FOR ID EQUALS exp TO exp DO OPENBRACE CLOSEBRACE
    (19) vars -> . VARS tipo savetype TWODOTS varsP

    ID              shift and go to state 61
    RETURN          shift and go to state 62
    READ            shift and go to state 63
    WRITE           shift and go to state 64
    CLOSEBRACE      reduce using rule 88 (empty -> .)
    WHILE           shift and go to state 68
    FOR             shift and go to state 69
    VARS            shift and go to state 12

    estatuto                       shift and go to state 52
    asignacion                     shift and go to state 53
    llamada                        shift and go to state 54
    retorno                        shift and go to state 55
    lectura                        shift and go to state 56
    escritura                      shift and go to state 57
    repeticion                     shift and go to state 58
    declaracion                    shift and go to state 59
    empty                          shift and go to state 60
    condicional                    shift and go to state 65
    no_condicional                 shift and go to state 66
    vars                           shift and go to state 67

state 47

    (32) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE .

    $end            reduce using rule 32 (bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE CLOSEBRACE .)


state 48

    (20) varsP -> param COMMA . varsP
    (20) varsP -> . param COMMA varsP
    (21) varsP -> . param SEMICOLON
    (23) param -> . ID
    (24) param -> . ID OPENBRACKET paramsP CLOSEBRACKET

    ID              shift and go to state 41

    param                          shift and go to state 40
    varsP                          shift and go to state 70

state 49

    (21) varsP -> param SEMICOLON .

    VARS            reduce using rule 21 (varsP -> param SEMICOLON .)
    CLASS           reduce using rule 21 (varsP -> param SEMICOLON .)
    FUNCTION        reduce using rule 21 (varsP -> param SEMICOLON .)
    MAIN            reduce using rule 21 (varsP -> param SEMICOLON .)
    $end            reduce using rule 21 (varsP -> param SEMICOLON .)
    CLOSEBRACE      reduce using rule 21 (varsP -> param SEMICOLON .)
    ID              reduce using rule 21 (varsP -> param SEMICOLON .)
    RETURN          reduce using rule 21 (varsP -> param SEMICOLON .)
    READ            reduce using rule 21 (varsP -> param SEMICOLON .)
    WRITE           reduce using rule 21 (varsP -> param SEMICOLON .)
    WHILE           reduce using rule 21 (varsP -> param SEMICOLON .)
    FOR             reduce using rule 21 (varsP -> param SEMICOLON .)


state 50

    (24) param -> ID OPENBRACKET . paramsP CLOSEBRACKET
    (25) paramsP -> . exp COMMA paramsP
    (26) paramsP -> . exp
    (67) exp -> . termino
    (68) exp -> . exp PLUS termino
    (69) exp -> . exp MINUS termino
    (70) termino -> . factor
    (71) termino -> . termino MULTIPLY factor
    (72) termino -> . termino DIVIDE factor
    (73) factor -> . ID OPENPARENTHESES exp CLOSEPARENTHESES
    (74) factor -> . ID
    (75) factor -> . CTEF
    (76) factor -> . CTEI
    (77) factor -> . OPENPARENTHESES h_exp CLOSEPARENTHESES

    ID              shift and go to state 71
    CTEF            shift and go to state 77
    CTEI            shift and go to state 78
    OPENPARENTHESES shift and go to state 76

    paramsP                        shift and go to state 72
    exp                            shift and go to state 73
    termino                        shift and go to state 74
    factor                         shift and go to state 75

state 51

    (13) funcion -> FUNCTION tipo TWODOTS ID savefuncscope OPENPARENTHESES . paramsfunction CLOSEPARENTHESES OPENBRACE estatuto CLOSEBRACE
    (15) paramsfunction -> . tipo param COMMA paramsfunction
    (16) paramsfunction -> . tipo param
    (27) tipo -> . INT
    (28) tipo -> . FLOAT
    (29) tipo -> . CHAR
    (30) tipo -> . BOOL

    INT             shift and go to state 20
    FLOAT           shift and go to state 21
    CHAR            shift and go to state 22
    BOOL            shift and go to state 23

    tipo                           shift and go to state 79
    paramsfunction                 shift and go to state 80

state 52

    (31) bloque -> MAIN OPENPARENTHESES CLOSEPARENTHESES OPENBRACE establishmainscope estatuto . CLOSEBRACE

    CLOSEBRACE      shift and go to state 81


state 53

    (34) estatuto -> asignacion . estatuto
    (34) estatuto -> . asignacion estatuto
    (35) estatuto -> . llamada estatuto
    (36) estatuto -> . retorno estatuto
    (37) estatuto -> . lectura estatuto
    (38) estatuto -> . escritura estatuto
    (39) estatuto -> . repeticion estatuto
    (40) estatuto -> . declaracion estatuto
    (41) estatuto -> . empty
    (47) asignacion -> . ID EQUALS exp SEMICOLON
    (48) asignacion -> . ID OPENBRACKET paramsP CLOSEBRACKET EQUALS exp SEMICOLON
    (43) llamada -> . ID OPENPARENTHESES param CLOSEPARENTHESES SEMICOLON
    (44) llamada -> . ID OPENPARENTHESES CLOSEPARENTHESES SEMICOLON
    (45) retorno -> . RETURN OPENPARENTHESES exp CLOSEPARENTHESES SEMICOLON
    (46) lectura -> . READ OPENPARENTHESES param CLOSEPARENTHESES SEMICOLON
    (49) escritura -> . WRITE OPENPARENTHESES escrituraP CLOSEPARENTHESES SEMICOLON
    (61) repeticion -> . condicional
    (62) repeticion -> . no_condicional
    (42) declaracion -> . vars
    (88) empty -> .
    (63) condicional -> . WHILE OPENPARENTHESES exp CLOSEPARENTHESES DO OPENBRACE estatuto CLOSEBRACE
    (64) condicional -> . WHILE OPENPARENTHESES exp CLOSEPARENTHESES DO OPENBRACE CLOSEBRACE
    (65) no_condicional -> . FOR ID EQUALS exp TO exp OPENBRACE estatuto CLOSEBRACE
    (66) no_condicional -> . FOR ID EQUALS exp TO exp DO OPENBRACE CLOSEBRACE
    (19) vars -> . VARS tipo savetype TWODOTS varsP

    ID              shift and go to state 61
    RETURN          shift and go to state 62
    READ            shift and go to state 63
    WRITE           shift and go to state 64
    CLOSEBRACE      reduce using rule 88 (empty -> .)
    WHILE           shift and go to state 68
    FOR             shift and go to state 69
    VARS            shift and go to state 12

    asignacion                     shift and go to state 53
    estatuto                       shift and go to state 82
    llamada                        shift and go to state 54
    retorno                        shift and go to state 55
    lectura                        shift and go to state 56
    escritura                      shift and go to state 57
    repeticion                     shift and go to state 58
    declaracion                    shift and go to state 59
    empty                          shift and go to state 60
    condicional                    shift and go to state 65
    no_condicional                 shift and go to state 66
    vars                           shift and go to state 67

state 54
